All html pages have been updated

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Sofiia Chaikovska">
-    <title>Main page</title>
+    <meta name="author" content="Ваше ім'я">
+    <title>Побутова техніка - Головна</title>
 </head>
 <body>
     <h1>Welcome!</h1>
+    <nav>
+        <ul>
+            <li><a href="page1.html">Пральні машини</a></li>
+            <li><a href="page2.html">Холодильники</a></li>
+            <li><a href="page3.html">Мікрохвильові печі</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
