--- a/lab1/page2.html
+++ b/lab1/page2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Sofiia Chaikovska">
-    <title>Second page</title>
+    <meta name="author" content="Ваше ім'я">
+    <title>Холодильники</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Холодильники</h1>
+    <a href="index.html">Назад на головну</a>
 </body>
 </html>
