--- a/lab1/page3.html
+++ b/lab1/page3.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Ваше ім'я">
+    <meta name="author" content="Sofiia Chaikovska">
     <title>Мікрохвильові печі</title>
 </head>
 <body>
