Project theme changed

--- a/lab1/aboutUs.html
+++ b/lab1/aboutUs.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
-    <title>Холодильники</title>
+    <title>Про наш салон</title>
 </head>
 <body>
-    <h1>Холодильники</h1>
+    <h1>Про наш салон</h1>
     <a href="index.html">Назад на головну</a>
 </body>
 </html>
