--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
-    <title>Побутова техніка - Головна</title>
+    <title>Салон краси - Головна</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Салон краси "Well beauty"</h1>
     <nav>
         <ul>
-            <li><a href="page1.html">Пральні машини</a></li>
-            <li><a href="page2.html">Холодильники</a></li>
-            <li><a href="page3.html">Мікрохвильові печі</a></li>
+            <li><a href="services.html">Послуги</a></li>
+            <li><a href="aboutUs.html">Про наш салон</a></li>
+            <li><a href="reviews.html">Відгуки клієнтів</a></li>
         </ul>
     </nav>
 </body>
