--- a/lab1/reviews.html
+++ b/lab1/reviews.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
-    <title>Мікрохвильові печі</title>
+    <title>Відгуки клієнтів</title>
 </head>
 <body>
-    <h1>Мікрохвильові печі</h1>
+    <h1>Відгуки клієнтів</h1>
     <a href="index.html">Назад на головну</a>
 </body>
 </html>
