--- a/lab1/services.html
+++ b/lab1/services.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
-    <title>Пральні машини</title>
+    <title>Послуги</title>
 </head>
 <body>
-    <h1>Пральні машини</h1>
+    <h1>Послуги салону</h1>
     <a href="index.html">Назад на головну</a>
 </body>
 </html>
