lab2: updated site

--- a/lab1/aboutUs.html
+++ b/lab1/aboutUs.html
@@ -5,8 +5,14 @@
     <meta name="author" content="Sofiia Chaikovska">
     <title>Про наш салон</title>
 </head>
-<body>
+<body style="background-image: url(beauty-salon-bg.jpg); background-repeat: no-repeat; background-size: 100% 800px;">
     <h1>Про наш салон</h1>
-    <a href="index.html">Назад на головну</a>
+    <p>Well Beauty — салон краси преміум-класу, в якому об'єднане все те, що створює атмосферу розкоші та комфорту.
+        <br>
+        Салон краси – це простір, де професійні майстри допомагають клієнтам доглядати за собою, підкреслювати природну красу та створювати нові образи. Тут поєднуються сучасні технології, якісна косметика та індивідуальний підхід до кожного відвідувача.
+        <br>
+        Сучасний салон краси – це не лише місце для догляду, а й простір для відпочинку та відновлення енергії. Високий рівень сервісу, комфортна атмосфера та кваліфіковані майстри допомагають кожному клієнту почуватися особливим. 💖
+    </p>
+    <a href="index.html"><img alt="back" src="backButton.jpg" width="100px" height="100px"/></a>
 </body>
 </html>
