--- a/lab1/reviews.html
+++ b/lab1/reviews.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Відгуки клієнтів</h1>
+    <p><b>Оксана 26 років, місто Малі Шешори</b>:
+        <br>
+        🌟🌟🌟🌟🌟
+        Вперше відвідала цей салон і залишилася у захваті! Майстер з фарбування підібрала ідеальний відтінок, волосся виглядає живим і сяючим. Атмосфера дуже затишна, персонал привітний, а якість обслуговування – на найвищому рівні. Обов’язково повернусь ще! 💖
+        <br>
+        <b>Ольга 53 роки, місто Північна Калита</b>:
+        <br>
+        🌟🌟🌟🌟🌟
+        Записалася на манікюр і не пошкодувала – майстер справжній професіонал, зробила все акуратно, покриття ідеальне. Салон стильний, чистий, працюють на якісних матеріалах. Дуже приємно, що дбають про клієнтів і створюють комфортну атмосферу. Рекомендую всім! 😊</p>
     <a href="index.html">Назад на головну</a>
 </body>
 </html>
