added some changes

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -16,20 +16,20 @@
         Запрошуємо вас до "Well beauty" – місця, де ваша краса сяє ще яскравіше!
         <br>Завітайте та подаруйте собі час для себе! 💖
         <br>Наш салон-партнер: <a href="https://gbar.com.ua/ua/kiev" style="color: deeppink;">GxBar</a>
-        <br> <a href="#Salons" style="color: darkorchid;">Наші салони-партнери</a>
+        <br> <a href="#Salons" style="color: rgb(204, 50, 191);">Наші салони-партнери</a>
     </p>
     <a href="salonView.jpg" target="_blank">
         <img alt="Salon View" src="salonView.jpg" style="display: block; margin-left: auto; margin-right: auto;" width="250" height="250"/>
     </a>
     <nav>
         <ul>
-            <li><a href="services.html">Послуги</a></li>
-            <li><a href="aboutUs.html">Про наш салон</a></li>
-            <li><a href="reviews.html">Відгуки клієнтів</a></li>
+            <li><a href="services.html"  style="color: rgb(204, 50, 191);">Послуги</a></li>
+            <li><a href="aboutUs.html"  style="color: rgb(204, 50, 191);" >Про наш салон</a></li>
+            <li><a href="reviews.html"  style="color: rgb(204, 50, 191);">Відгуки клієнтів</a></li>
         </ul>
     </nav>
     <h2>Акційна пропозиція березня</h2>
-    <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale">тут</a>!</p>
+    <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale"  style="color: rgb(204, 50, 191);">тут</a>!</p>
     <h2 id="Salons">Наші салони-партнери</h2>
     <iframe src="https://leblanc.ua/en/" height="500" width="700" title="Salons"></iframe>
 </body>
