--- a/lab1/services.html
+++ b/lab1/services.html
@@ -27,12 +27,12 @@
             <td><img src="massage.jpg" /></td>
         </tr>
         <tr>
-            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
         </tr>
-        <tr></tr>
+        <tr>
             <td>Щоб волосся виглядало доглянутим, красивим і здоровим, потрібно системно за ним доглядати. Стан пасом залежить від нашого раціону, способу життя, кількості стресів, екології та інших чинників. І звичайно ж, волосся не може бути розкішним без правильного догляду. Правильний шампунь, кондиціонер та регулярні маски дають своє. Але щоб досягти реально помітного результату, краще віддати свої локони до рук професіоналів.</td>
             <td>Доглянуті руки та свіжий манікюр — це вже невід’ємна частина зовнішнього вигляду.У Well beauty ми пропонуємо послуги обрізного і необрізного манікюру, покриття гель-лаком або еко-покриття, а також альтернативний догляд: бразильський манікюр і японське покриття P. Shine.</td>
             <td>В нашій студії ви отримаєте результат, який перевершить ваші очікування. Дивуйте, сяйте і любіть себе разом з Well beauty. Тільки ЕКО-матеріали, тільки професійні майстри в нашій студії!</td>
