--- a/lab1/aboutUs.html
+++ b/lab1/aboutUs.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
+    <link rel="stylesheet" href="styles.css">
     <title>Про наш салон</title>
 </head>
 <body style="background-image: url(beauty-salon-bg.jpg); background-repeat: no-repeat; background-size: 100% 800px;">
-    <h1>Про наш салон</h1>
-    <p>Well Beauty — салон краси преміум-класу, в якому об'єднане все те, що створює атмосферу розкоші та комфорту.
+    <h1 id="main-title">Про наш салон</h1>
+    <p id="paragraph-about-us" style="color: rgb(0, 132, 255);">Well Beauty — салон краси преміум-класу, в якому об'єднане все те, що створює атмосферу розкоші та комфорту.
         <br>
         Салон краси – це простір, де професійні майстри допомагають клієнтам доглядати за собою, підкреслювати природну красу та створювати нові образи. Тут поєднуються сучасні технології, якісна косметика та індивідуальний підхід до кожного відвідувача.
         <br>
