--- a/lab1/reviews.html
+++ b/lab1/reviews.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
+    <link rel="stylesheet" href="styles.css">
     <title>Відгуки клієнтів</title>
 </head>
 <body>
-    <h1>Відгуки клієнтів</h1>
-    <p><b>Оксана 26 років, місто Малі Шешори</b>:
+    <h1 id="main-title">Відгуки клієнтів</h1>
+    <p style="font-size: 20px; color: #444; line-height: 1.6; text-align: justify;"><b>Оксана 26 років, місто Малі Шешори</b>:
         <br>
         🌟🌟🌟🌟🌟
         Вперше відвідала цей салон і залишилася у захваті! Майстер з фарбування підібрала ідеальний відтінок, волосся виглядає живим і сяючим. Атмосфера дуже затишна, персонал привітний, а якість обслуговування – на найвищому рівні. Обов’язково повернусь ще! 💖
