--- a/lab1/services.html
+++ b/lab1/services.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
+    <link rel="stylesheet" href="styles.css">
     <title>Послуги</title>
     <style>
-    table, th, td {
-        border: 1px solid black;
-    }
+        tr.salons-partners a {
+            color: rgb(185, 81, 255);
+        }
+
+        tr.salons-partners a:hover {
+            color: rgb(220, 150, 255);
+        }
     </style>
 </head>
-<body style="background-color: #c2e8e9;">
-    <h1 style="text-align: center;">Послуги салону</h1>
-    <table style="margin: auto;">
-        <caption>Послуги салону</caption>
-        <tr style="background-color:lightcoral">
+<body>
+    <h1 id="main-title">Послуги салону та ціни</h1>
+    <table class="services-table">
+        <tr>
             <th>Професійний догляд за волоссям</th>
             <th>Манікюр та педикюр</th>
             <th>Косметологічні процедури</th>
@@ -26,11 +30,11 @@
             <td><img src="face.jpg" /></td>
             <td><img src="massage.jpg" /></td>
         </tr>
-        <tr>
-            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
-            <td><a href="https://gbar.com.ua/ua#services"  style="color: rgb(204, 50, 191);" >Завітайте на послугу до нашого партнера</a></td>
+        <tr class="salons-partners">
+            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
         </tr>
         <tr>
             <td>Щоб волосся виглядало доглянутим, красивим і здоровим, потрібно системно за ним доглядати. Стан пасом залежить від нашого раціону, способу життя, кількості стресів, екології та інших чинників. І звичайно ж, волосся не може бути розкішним без правильного догляду. Правильний шампунь, кондиціонер та регулярні маски дають своє. Але щоб досягти реально помітного результату, краще віддати свої локони до рук професіоналів.</td>
@@ -39,78 +43,78 @@
             <td>Ми знаємо як перемогти тривогу та напругу в тілі, впоратися з дедлайнами та напруженнями на роботі, привести тіло в порядок і прибрати післяпологову депресію, підготувати до змагання або відновити після марафону, розслабити Ваше тіло та дати психіці відпочити від усього та всіх.</td>
         </tr>
     </table>
-    <h2>Опис основних послуг</h2>
+    <h2 class="section-title">Опис основних послуг</h2>
     <dl>
-        <dt><b>Манікюр</b></dt>
+        <dt>Манікюр</dt>
         <dd>Косметична процедура догляду за нігтями та шкірою рук, що включає обробку нігтьової пластини, кутикули та нанесення покриття.</dd>
 
-        <dt><b>Педикюр</b></dt>
+        <dt>Педикюр</dt>
         <dd>Доглядова процедура для нігтів і шкіри стоп, що допомагає підтримувати їх здоров'я та естетику.</dd>
 
-        <dt><b>Кератинове випрямлення</b></dt>
+        <dt>Кератинове випрямлення</dt>
         <dd>Технологія вирівнювання волосся за допомогою кератину, що робить його гладким і слухняним.</dd>
 
-        <dt><b>Фарбування волосся</b></dt>
+        <dt>Фарбування волосся</dt>
         <dd>Процес зміни кольору волосся за допомогою стійких або тимчасових фарб.</dd>
 
-        <dt><b>Масаж</b></dt>
-        <dd>Процедура, що покращує кровообіг, підтягує шкіру та допомагає розслабити м’язи.</dd>
+        <dt>Масаж</dt>
+        <dd style="margin-bottom: 70px;">Процедура, що покращує кровообіг, підтягує шкіру та допомагає розслабити м’язи.</dd>
     </dl>
 
-    <table style="margin: auto; border-spacing: 10px; color:rgb(69, 3, 3); background-color: rgba(157, 202, 246, 0.804);">
+    <table class="price-table">
         <colgroup>
           <col span="1">
-          <col span="1" style="background-color: #afeec5">
+          <col span="1" class="price">
           <col span="1">
-          <col span="1" style="background-color: #afeec5">
+          <col span="1" class="price">
           <col span="1">
-          <col span="1" style="background-color: #afeec5">
+          <col span="1" class="price">
           <col span="1">
-          <col span="1" style="background-color: #afeec5">
+          <col span="1" class="price">
         </colgroup>
         <tr>
-            <th colspan="8" style="padding: 10px;">Ціни</th>
+            <th colspan="8">Ціни</th>
         </tr>
         <tr>
-            <th colspan="2" style="padding: 7px;">Волосся</th>
-            <th colspan="2" style="padding: 7px;">Манікюр</th>
-            <th colspan="2" style="padding: 7px;">Косметологія</th>
-            <th colspan="2" style="padding: 7px;">Масаж</th>
+            <th colspan="2">Волосся</th>
+            <th colspan="2">Манікюр</th>
+            <th colspan="2">Косметологія</th>
+            <th colspan="2">Масаж</th>
         </tr>
         <tr>
             <td>Стрижка</td>
-            <td style="text-align: center;">100$</td>
+            <td>100$</td>
             <td>Класичний</td>
-            <td style="text-align: center;">150$</td>
+            <td>150$</td>
             <td>Догляд</td>
-            <td style="text-align: center;">1500$</td>
-            <td rowspan="2">Массаж + догляд</td>
-            <td style="text-align: center;">TOP: 700$</td>
+            <td>1000$</td>
+            <td rowspan="3">Массаж + догляд</td>
+            <td>TOP: 700$</td>
         </tr>
         <tr>
             <td>Фарбування</td>
-            <td style="text-align: center;">200$</td>
+            <td>200$</td>
             <td>Апаратний</td>
-            <td style="text-align: center;">100$</td>
-            <td>Aпаратна</td>
-            <td style="text-align: center;">200$</td>
-            <td style="text-align: center;">VIP: 950$</td>
+            <td>100$</td>
+            <td rowspan="2">Aпаратна</td>
+            <td rowspan="2">1500$</td>
+            <td rowspan="2">VIP: 950$</td>
         </tr>
         <tr>
             <td>Відновлення</td>
-            <td style="text-align: center;">300$</td>
+            <td>300$</td>
             <td>SPA</td>
-            <td style="text-align: center;">400$</td>
+            <td>400$</td>
         </tr>
     </table>
 
-    <h2 id="sale">SALE!</h2>
+    <h2 id="sale" class="section-title">SALE!</h2>
     <p>🎀 Весняне оновлення! Знижка 50% на фарбування волосся в рожевий 🎀
 
         <br>Мрієте про яскравий весняний образ? Саме час здійснити задумане! У березні "Well beauty" дарує вам 50% знижки на фарбування волосся в рожевий колір.
         <br>
         <h3>✨ Умови акції:</h3>
-        <ul style="list-style-type:'✔'">
+        <ul class="check-list">
             <li>
                 Діє з 1 по 31 березня
             </li>
@@ -126,7 +130,7 @@
         </ul>
         <br>
         <h3>💖 Для кого ця акція?</h3>
-        <ul style="list-style-type:'🍓'">
+        <ul  class="check-list">
             <li>
                 Для тих, хто хоче кардинальних змін або просто освіжити образ
             </li>
@@ -139,14 +143,14 @@
         </ul>
         <br>
         <h3>📍 Як скористатися знижкою?</h3>
-        <ol>
+        <ol class="ordered-list">
             <li>
                 Оберіть бажаний відтінок разом із майстром
             </li>
             <li>
                 Запишіться на процедуру зручним для вас способом:
                 <ul>
-                    <li style="list-style-type:'📞'">Телефоном</li>
+                    <li style="list-style-type:'📞'"> За Телефоном</li>
                     <li style="list-style-type:'📩'">У соцмережах</li>
                 </ul>
             </li>
