--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,34 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Sofiia Chaikovska">
-    <title>Салон краси - Головна</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Салон краси</title>
 </head>
+
+<style>
+    body {
+        margin-left: 220px;
+    }
+
+</style>
+
 <body>
-    <h1 style="font-size: 60px; text-align:center; color:hotpink; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
-        Салон краси "Well beauty"
-    </h1>
-    <p style="text-align: center;">Ласкаво просимо до <b>"Well beauty"</b> – простору краси та гармонії! <br>
+    <h1 id="main-title">Салон краси "Well beauty"</h1>
+    <p>Ласкаво просимо до <b>"Well beauty"</b> – простору краси та гармонії! <br>
         Ми створили місце, де ви зможете розслабитися, отримати професійний догляд і відчути справжню турботу про себе. <br>Наші майстри – це команда досвідчених фахівців, які допоможуть вам підкреслити природну красу та втілити ваші найсміливіші ідеї.
         <br>Ми використовуємо лише <b><i>найкращу косметику та сучасні технології</i></b>, щоб кожен візит був для вас приємним ритуалом краси.
         <br>
         Запрошуємо вас до "Well beauty" – місця, де ваша краса сяє ще яскравіше!
         <br>Завітайте та подаруйте собі час для себе! 💖
-        <br>Наш салон-партнер: <a href="https://gbar.com.ua/ua/kiev" style="color: deeppink;">GxBar</a>
-        <br> <a href="#Salons" style="color: rgb(204, 50, 191);">Наші салони-партнери</a>
+        <br> <a href="#Salons" id="link-salons">Наші салони-партнери</a>
     </p>
     <a href="salonView.jpg" target="_blank">
         <img alt="Salon View" src="salonView.jpg" style="display: block; margin-left: auto; margin-right: auto;" width="250" height="250"/>
     </a>
     <nav>
         <ul>
-            <li><a href="services.html"  style="color: rgb(204, 50, 191);">Послуги</a></li>
-            <li><a href="aboutUs.html"  style="color: rgb(204, 50, 191);" >Про наш салон</a></li>
-            <li><a href="reviews.html"  style="color: rgb(204, 50, 191);">Відгуки клієнтів</a></li>
+            <li><a href="services.html">Послуги</a></li>
+            <li><a href="aboutUs.html">Про наш салон</a></li>
+            <li><a href="reviews.html">Відгуки клієнтів</a></li>
         </ul>
     </nav>
-    <h2>Акційна пропозиція березня</h2>
-    <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale"  style="color: rgb(204, 50, 191);">тут</a>!</p>
-    <h2 id="Salons">Наші салони-партнери</h2>
+    <h2 class="section-title">Акційна пропозиція березня</h2>
+    <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale">тут</a>!</p>
+    <h2 id="Salons" class="section-title">Наші салони-партнери</h2>
     <iframe src="https://leblanc.ua/en/" height="500" width="700" title="Salons"></iframe>
 </body>
 </html>
