--- a/labs/reviews.html
+++ b/labs/reviews.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1 id="main-title">Відгуки клієнтів</h1>
-    <p style="font-size: 20px; color: #444; line-height: 1.6; text-align: justify;"><b>Оксана 26 років, місто Малі Шешори</b>:
+    <p style="font-size: 20px; color: #444; line-height: 1.6; text-align: justify;"><b>Оксана 26 років, Дніпро</b>:
         <br>
         🌟🌟🌟🌟🌟
         Вперше відвідала цей салон і залишилася у захваті! Майстер з фарбування підібрала ідеальний відтінок, волосся виглядає живим і сяючим. Атмосфера дуже затишна, персонал привітний, а якість обслуговування – на найвищому рівні. Обов’язково повернусь ще! 💖
         <br>
-        <b>Ольга 53 роки, місто Північна Калита</b>:
+        <b>Ольга 53 роки, Київ</b>:
         <br>
         🌟🌟🌟🌟🌟
         Записалася на манікюр і не пошкодувала – майстер справжній професіонал, зробила все акуратно, покриття ідеальне. Салон стильний, чистий, працюють на якісних матеріалах. Дуже приємно, що дбають про клієнтів і створюють комфортну атмосферу. Рекомендую всім! 😊</p>
