--- a/labs/index.html
+++ b/labs/index.html
@@ -34,8 +34,10 @@
             <li><a href="reviews.html">Відгуки клієнтів</a></li>
         </ul>
     </nav>
-    <h2 class="section-title">Акційна пропозиція березня</h2>
-    <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale">тут</a>!</p>
+    <div class="sale-section">
+        <h2 class="section-title">Акційна пропозиція березня</h2>
+        <p>Фарбування волосся в рожевий колір зі знижкою 50%! Дізнайся більше <a href="services.html#sale">тут</a>!</p>
+    </div>
     <h2 id="Salons" class="section-title">Наші салони-партнери</h2>
     <iframe src="https://leblanc.ua/en/" height="500" width="700" title="Salons"></iframe>
 </body>
