--- a/labs/services.html
+++ b/labs/services.html
@@ -111,7 +111,7 @@
     <h2 id="sale" class="section-title">SALE!</h2>
     <p>🎀 Весняне оновлення! Знижка 50% на фарбування волосся в рожевий 🎀
 
-        <br>Мрієте про яскравий весняний образ? Саме час здійснити задумане! У березні "Well beauty" дарує вам 50% знижки на фарбування волосся в рожевий колір.
+        <br>Мрієте про яскравий весняний образ? Саме час здійснити задумане!<b> У березні</b> <i>"Well beauty"</i> дарує вам 50% знижки на фарбування волосся в рожевий колір.
         <br>
         <h3>✨ Умови акції:</h3>
         <ul class="check-list">
