--- a/labs/aboutUs.html
+++ b/labs/aboutUs.html
@@ -17,7 +17,7 @@
 
     <section class="info-section">
         <h2 class="section-title">Чому обирають нас?</h2>
-        <p>Наші клієнти довіряють нам, тому що ми <strong>гарантуємо якість</strong> та <i>індивідуальний підхід.</i></p>
+        <p>Наші клієнти довіряють нам, тому що ми <strong>гарантуємо якість,</strong> <i>індивідуальний підхід</i> і <i>професіоналізм</i>.</p>
         <p>Ми використовуємо сертифіковану косметику та передові технології для догляду за шкірою та волоссям.</p>
     </section>
     <a href="index.html"><img alt="back" src="backButton.jpg" width="100px" height="100px"/></a>
