--- a/labs/reviews.html
+++ b/labs/reviews.html
@@ -8,15 +8,25 @@
 </head>
 <body>
     <h1 id="main-title">Відгуки клієнтів</h1>
-    <p style="font-size: 20px; color: #444; line-height: 1.6; text-align: justify;"><b>Оксана 26 років, Дніпро</b>:
-        <br>
-        🌟🌟🌟🌟🌟
-        Вперше відвідала цей салон і залишилася у захваті! Майстер з фарбування підібрала ідеальний відтінок, волосся виглядає живим і сяючим. Атмосфера дуже затишна, персонал привітний, а якість обслуговування – на найвищому рівні. Обов’язково повернусь ще! 💖
-        <br>
-        <b>Ольга 53 роки, Київ</b>:
-        <br>
-        🌟🌟🌟🌟🌟
-        Записалася на манікюр і не пошкодувала – майстер справжній професіонал, зробила все акуратно, покриття ідеальне. Салон стильний, чистий, працюють на якісних матеріалах. Дуже приємно, що дбають про клієнтів і створюють комфортну атмосферу. Рекомендую всім! 😊</p>
-    <a href="index.html">Назад на головну</a>
+    <div class="reviews-container">
+        <div class="review">
+            <img src="hair-coloring.jpg" alt="Фарбування волосся">
+            <p><span>Оксана, 26 років, Дніпро</span>: Вперше відвідала цей салон і залишилася у захваті! Майстер з фарбування підібрала ідеальний відтінок, волосся виглядає живим і сяючим.</p>
+        </div>
+        <div class="review">
+            <img src="manicure.jpg" alt="манікюр">
+            <p><span>Ольга, 53 роки, Київ</span>: Записалася на манікюр і не пошкодувала – майстер справжній професіонал!</p>
+        </div>
+        <div class="review">
+            <img src="massage.jpg" alt="Масаж">
+            <p><span>Марина, 30 років, Львів</span>: Дуже сподобався масаж – професійний підхід та релаксуюча атмосфера!</p>
+        </div>
+    </div>
+    <div class="cta-container">
+        <div class="feedback-container">Після прочитання відгуків
+            <div class="cta-message">Варто обов'язково завітати до нашого салону краси</div>
+        </div>
+    </div>
+    <a href="index.html" class="back-button">Назад на головну</a>
 </body>
 </html>
