--- a/labs/services.html
+++ b/labs/services.html
@@ -5,15 +5,6 @@
     <meta name="author" content="Sofiia Chaikovska">
     <link rel="stylesheet" href="styles.css">
     <title>Послуги</title>
-    <style>
-        tr.salons-partners a {
-            color: rgb(185, 81, 255);
-        }
-
-        tr.salons-partners a:hover {
-            color: rgb(220, 150, 255);
-        }
-    </style>
 </head>
 <body>
     <h1 id="main-title">Послуги салону та ціни</h1>
@@ -31,7 +22,7 @@
             <td><img src="massage.jpg" /></td>
         </tr>
         <tr class="salons-partners">
-            <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
+            <td><a href="https://en.wikipedia.org/wiki/Beauty_salon">Завітайте на послугу до нашого партнера</a></td>
             <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
             <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
             <td><a href="https://gbar.com.ua/ua#services">Завітайте на послугу до нашого партнера</a></td>
