--- a/labs/reviews.html
+++ b/labs/reviews.html
@@ -21,6 +21,8 @@
             <img src="massage.jpg" alt="Масаж">
             <p><span>Марина, 30 років, Львів</span>: Дуже сподобався масаж – професійний підхід та релаксуюча атмосфера!</p>
         </div>
+    
+    <div id="visit-us">Завітайте до нас</div>
     </div>
     <div class="cta-container">
         <div class="feedback-container">Після прочитання відгуків
